animacion usando transition (CSS)

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -10,12 +10,16 @@
     top: 30%;
     left: 25%;
     width: 50%;
+    transition: all 0.4s ease-out;
 }
 
 .ModalOpen{
-    display: block;
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .ModalClosed {
-    display: none;
+    z-index: -100;
+    opacity: 0;
+    transform: translateY(-100%);
 }
