--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -14,12 +14,48 @@
 }
 
 .ModalOpen{
-    opacity: 1;
-    transform: translateY(0);
+    animation: openModal 0.5s ease-out forwards;
 }
 
 .ModalClosed {
-    z-index: -100;
-    opacity: 0;
-    transform: translateY(-100%);
+    animation: closedModal 0.5s ease-out forwards;
+
+}
+
+@keyframes openModal {
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+
+    }
+
+    50% {
+        opacity: 1;
+        transform: translateY(30%);
+
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes closedModal {
+    0% {
+        opacity: 1;
+        transform: translateY(0);
+
+    }
+
+    50% {
+        opacity: 0.7;
+        transform: translateY(60%);
+
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(-300%);
+    }
 }
