--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -22,6 +22,22 @@
 
 }
 
+.fade-slide-enter {
+
+
+}
+..fade-slide-enter-active{
+
+}
+
+.fade-slide-exit{
+
+}
+
+.fade-slide-exit-active{
+    
+}
+
 @keyframes openModal {
     0% {
         opacity: 0;
